Revision history for DBIx-Squirrel

1.3.1   2024-08-24 09:47
        - General code improvements.
        - Fix bug in &DBIx::Squirrel::it::DESTROY.
        - Removed unnecessary imports.
        - Rewrite &DBIx::Squirrel::util::part_args to address issue in Perls <= 5.18.4
1.3.0   2024-08-23 21:00
        - Ground-up rewrite of iterators and result-set code.
        - Ground-up rewrite and simplification of test code.
        - More documentation added. This stuff is never finished, and I'll be adding more in
          future!
        - A lot of refactoring and tidying up completed.
1.2.11  2024-08-18 13:15
        - Fixed typos.
        - Did some internal refactoring.
        - Updated t/lib/T/Constants.pm to ensure that SQLite database connections are created with
          both `sqlite_see_if_its_a_number => !!1` and `sqlite_open_flags => SQLITE_OPEN_READONLY`
          flags and re-ran tests successfully on macOS under Perl 5.28.1. Action was prompted by
          CPAN Tester report confirming Wstat 139 SEGFAULT on BSD under Perl 5.28.1; I have no way
          to replicate this build environment exactly, so I'm hoping this fixes the issue. We shall
          see. Thanks to Chris Williams (BINGOS) for the original report.
1.2.10  2024-08-17 17:35
        - Fixed minor typos in POD.
        - Did some internal refactoring.
        - Updated dist.ini: no longer using Dist::Zilla Readme plugin to produce README.
        - Updated st.pm: bind_param method no longer drops the third argument (bind attributes) before
          handing-off to &DBI::st::bind_value.
        - No longer quoting hash keys matching /^\w+$/.
1.2.9   2024-08-17 22:50
        - Reorganised the examples folder and renamed an example script.
        - Added some canned transforms.
        - Added new example script (examples/transformations/02.pl).
        - Added DBD::SQLite to test dependencies, with thanks to Slaven Rezić (SREZIC) for the alert.
1.2.8   2024-08-16 18:45