@@ -8,6 +8,8 @@ BEGIN {
 }
 
 diag("Testing DBIx::Squirrel $DBIx::Squirrel::VERSION, Perl $], $^X");
+
 ok(defined(&foo),                  'import "database_entity"');
 ok(defined(&bar) && defined(&baz), 'import "database_entities"');
+
 done_testing();
