@@ -21,12 +21,16 @@ subtest 'associate helper with database connection' => sub {
     my $dbh = DBIx::Squirrel->connect(@MOCK_DB_CONNECT_ARGS);
     isa_ok(db($dbh), 'DBIx::Squirrel::db');
     is(db, $dbh, 'helper ("db") associated');
+
+    done_testing();
 };
 
 subtest 'resolve helper; associate "st" helper with statement' => sub {
     my $sth = db->prepare('SELECT * FROM artists');
     isa_ok(st($sth), 'DBIx::Squirrel::st');
     is(st, $sth, 'helper ("st") associated');
+
+    done_testing();
 };
 
 done_testing();
